--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -6,7 +6,7 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="@dimen/movie_item_height"
         android:id="@+id/movieThumbnail"
         android:scaleType="fitXY"
         android:contentDescription="@string/movie_thumbnail_desc"
