--- a/app/src/main/res/menu/sort_by.xml
+++ b/app/src/main/res/menu/sort_by.xml
@@ -9,8 +9,14 @@
         android:title="@string/sort_by"/>
 
     <item
-        android:id="@+id/ref_movie"
+        android:id="@+id/movie_favorites"
         android:orderInCategory="2"
+        app:showAsAction="never"
+        android:title="@string/show_favorites"/>
+
+    <item
+        android:id="@+id/ref_movie"
+        android:orderInCategory="3"
         app:showAsAction="never"
         android:title="@string/refresh"/>
 
